--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/ComprobacionGastos.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/ComprobacionGastos.cshtml
@@ -269,7 +269,7 @@
                                                         </th>
                                                     </tr>
                                                 </thead>
-                                                <tbody id="body_conceptos">
+                                                <tbody>
                                                     @foreach (var item in Model.GV_rel_gastos_solicitud)
                                                     {
                                                         <tr>
@@ -377,129 +377,96 @@
                             </div>
                             <br />
                             <div class="table-responsive">
-                                <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                                <table id="datatable_2" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                     <thead>
                                         <tr style=" background-color: #0094ff; color: azure;">
                                             <th width="1%">
                                                 #
                                             </th>
-                                            <th>
-                                                Concepto
-                                            </th>
-                                            <th>
-                                                Cuenta
-                                            </th>
-                                            <th>
-                                                Factura
-                                            </th>
-                                            <th>
+                                            <th style="background-color:#175f93">
                                                 Fecha Factura
                                             </th>
-                                            <th>
-                                                UUID/Folio Fiscal
+                                            <th style="background-color:#175f93" nowrap>
+                                                UUID
                                             </th>
-                                            <th>
-                                                MONEDA
-                                            </th>
-                                            <th>
-                                                ImporteFactura
-                                            </th>
-                                            <th>
+                                            <th>PDF</th>
+                                            <th style="background-color:#175f93">
                                                 Tipo de Cambio
                                             </th>
-                                            <th>
-                                                Importe MXN
+                                            <th style="background-color:#175f93">
+                                                Moneda
+                                            </th>
+                                            <th nowrap>
+                                                Cuenta @for (int i = 0; i < 15; i++)
+                                                {
+                                                    <span>&ensp;</span>
+                                                }
+                                            </th>
+                                            <th nowrap>
+                                                Descripci&oacute;n @for (int i = 0; i < 20; i++)
+                                                {
+                                                    <span>&ensp;</span>
+                                                }
                                             </th>
                                             <th>
-                                                Propina
+                                                Cantidad
                                             </th>
                                             <th>
-                                                Validacion
+                                                Precio Unitario
                                             </th>
                                             <th>
-                                                IVA
+                                                Importe
                                             </th>
                                             <th>
-                                                Total
+                                                Descuento
+                                            </th>
+                                            <th>
+                                                % IVA
+                                            </th>
+                                            <th>
+                                                Total IVA
+                                            </th>
+                                            <th>
+                                                % ISR
+                                            </th>
+                                            <th>
+                                                Total ISR
+                                            </th>
+                                            <th>
+                                                % IEPS
+                                            </th>
+                                            <th>
+                                                Total IEPS
+                                            </th>
+                                            <th>
+                                                Total Translados
+                                            </th>
+                                            <th>
+                                                Total Retenciones
+                                            </th>
+                                            <th>
+                                                Total MXN
                                             </th>
                                             <th></th>
                                         </tr>
                                     </thead>
                                     <tbody id="body_conceptos">
-
-                                        @*<tr>
-                                                <td>
-                                                    1
-                                                </td>
-                                                <td width="10%">
-                                                    <select name="planta" class="form-control select2bs4" style="width:100%">
-                                                        <option value="">-- Selecccionar --</option>
-                                                        <option value="1">No Deducibles (610010)</option>
-                                                        <option value="2">Hospedaje (610030)</option>
-                                                        <option value="3">Comidas (610040)</option>
-                                                        <option value="4">Vuelos (610070)</option>
-                                                        <option value="5">Transporte terrestre (610071)</option>
-                                                        <option value="6">Renta de automovil (610072)</option>
-                                                        <option value="7">Casetas (610073)</option>
-                                                        <option value="8">Combustible (610074)</option>
-                                                        <option value="9">Varios (610080)</option>
-
-                                                    </select>
-                                                </td>
-                                                <td>
-                                                    610030
-                                                </td>
-                                                <td>
-                                                    ¿?
-                                                </td>
-                                                <td>
-                                                    @DateTime.Now.ToShortDateString()
-                                                </td>
-                                                <td>
-                                                    4910a97d-0b1b-42b1-b579-2c8ae297eca3
-                                                </td>
-                                                <td>
-                                                    MXN
-                                                </td>
-                                                <td>
-                                                    $ 123.45
-                                                </td>
-                                                <td>
-                                                    1
-                                                </td>
-                                                <td>
-                                                    $ 100.00
-                                                </td>
-                                                <td>
-                                                    $ 0.00
-                                                </td>
-                                                <td>
-                                                    ¿?
-                                                </td>
-                                                <td>
-                                                    $ 123.45
-                                                </td>
-                                                <td>
-                                                    Total?
-                                                </td>
-                                                <td><button type="button" class="btn btn-danger float-lg-left"><i class="fa-solid fa-trash-can"></i></button></td>
-                                            </tr>*@
                                     </tbody>
                                     <tfoot>
                                         <tr>
-                                            <th colspan="13" style="text-align:right">Total Moneda Origen</th>
+                                            <th colspan="14" style="text-align:right">Total Moneda Origen</th>
                                             <th id="total_gastos" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional) MXN</th>
                                         </tr>
                                         <tr>
-                                            <th colspan="13" style="text-align:right">Total MXN</th>
+                                            <th colspan="14" style="text-align:right">Total MXN</th>
                                             <th id="total_gastos" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional) MXN</th>
                                         </tr>
                                         <tr>
-                                            <th colspan="13" style="text-align:right">ANTICIPO</th>
+                                            <th colspan="14" style="text-align:right">ANTICIPO</th>
                                             <th id="total_gastos" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional) MXN</th>
                                         </tr>
                                         <tr>
-                                            <th colspan="13" style="text-align:right">SALDO POR COMPROBAR</th>
+                                            <th colspan="14" style="text-align:right">SALDO POR COMPROBAR</th>
                                             <th id="total_gastos" style="text-align:right" nowrap>$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.sumaGastosNacional) MXN</th>
                                         </tr>
                                     </tfoot>
@@ -687,7 +654,9 @@
              //evento para buscar uuid desde cofidi
             $("#buscar-uuid").click(function () {
                 BuscaXML();
+                // Initialize Select2 Elements (debe ir después de asignar el valor)
             });
+
 
             //al cargar la página por primera vez
             verificaEstadoCombos();
@@ -789,8 +758,6 @@
                         let datos = JSON.parse(data)
                         let estatus = datos[0].status;
 
-                        console.log(datos);
-
                         //verifica si se leyó correctamente el archivo xlsx
                         if (estatus == "ERROR") {
                             $("#error-msj-div").html(datos[0].value);
@@ -804,8 +771,7 @@
 
                         } else if (datos[0].status == "OK") {
 
-                            $("#div_ocultos").html(datos[0].div_ocultos);
-                            //recargaTabla(datos[0].value);
+                            AgregaConcepto(datos[0].value);
 
                             Swal.fire({
                                 icon: 'success',
@@ -817,6 +783,10 @@
                             //borra el archivo una vez que se ha cargado
                             $("#archivo1").val('');
                             $('#archivo1').next('label').html('Seleccione un archivo...');
+
+                            $('.select2bs4').select2({
+                                theme: 'bootstrap4'
+                            })
 
                         } else if (datos[0].status == "404") {
                             Swal.fire({
@@ -876,6 +846,12 @@
                 $('#@Html.IdFor(model => model.GV_comprobacion.id_centro_costo)').prop("disabled", false);
             }
 
+        }
+
+        //Agrega Concepto leido a la tabla
+        function AgregaConcepto(texto) {
+            console.log(texto);
+            $("#body_conceptos").append(texto);
         }
 
         //variable para formatear numeros
